--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,6 @@ header{
 
 #section1{
     background-color: var(--lightgreen);
-    height: 700px;
 }
 
 hr{
@@ -156,14 +155,19 @@ hr{
     align-items: center;;
 }
 
-#divSection1{
+#divSection1 article{
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: center;
+    gap: 40px;
+}
+
+#divSection1{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     max-width: 1440px;
-    width: 50%;
-    padding: 0 15px;
+    margin: auto;
+    padding: 100px 15px;
     gap: 40px;
 }
 
@@ -409,9 +413,17 @@ h2{
 }
 
 #divSection1{
-    width: 100%;
+    grid-template-columns: 1fr;
+    padding: 50px 15px;
 }
 
+#divSection1 img{
+    display: none;
+}
+
+#divSection1 div{
+    flex-direction: column;
+}
 #section2 div{
     flex-direction: column;
     gap:40px;
